--- a/manual/URL-Templates.html
+++ b/manual/URL-Templates.html
@@ -78,8 +78,8 @@
   </ul>
   <ol>
     <li>
-      <b>AQI: Air Quality Index</b>
-      <p>Return Air Quality for specified zip-code</p>
+      <b>AQI From Wunderground</b>
+      <p>Air quality from Wunderground</p>
     </li>
     <li>
       <b>Air Traffic Control</b>
