--- a/manual/emacspeak_002dvm.html
+++ b/manual/emacspeak_002dvm.html
@@ -178,7 +178,8 @@ that has been forwarded multiple times.
       "index-emacspeak_002dvm_002dtoggle_002dhtml_002dmime_002ddemotion-1">
       </span>
       <div class="format">
-        <pre class="format">Toggle state of HTML Mime Demotion.
+        <pre class=
+        "format">Toggle state of HTML Mime promotion/Demotion.
 </pre>
       </div>
     </dd>
