--- a/manual/voice_002dsetup.html
+++ b/manual/voice_002dsetup.html
@@ -112,6 +112,9 @@ positive, and disable it if ARG is zero or negative.  If called
 from Lisp, also enable the mode if ARG is omitted or nil, and
 toggle it if ARG is ‘toggle’; disable the mode otherwise.
 
+The mode’s hook is called both when the mode is enabled and when
+it is disabled.
+
 (fn &amp;optional ARG)
 </pre>
       </div>
