--- a/manual/emacspeak.html
+++ b/manual/emacspeak.html
@@ -312,6 +312,7 @@ d RET           dtk-set-chunk-separator-syntax
 d C-n           dtk-notify-initialize
 d C-o           outloud
 d C-s           dtk-notify-shutdown
+d C-v           voice-lock-mode
 d SPC           dtk-toggle-splitting-on-white-space
 d ,             dtk-toggle-punctuation-mode
 d 0 .. d 9      dtk-set-predefined-speech-rate
@@ -335,7 +336,7 @@ d o             dtk-toggle-strip-octals
 d p             dtk-set-punctuations
 d r             dtk-set-rate
 d s             dtk-toggle-split-caps
-d v             voice-lock-toggle
+d v             global-voice-lock-mode
 d w             emacspeak-toggle-word-echo
 d z             emacspeak-zap-tts
 
