--- a/manual/index.html
+++ b/manual/index.html
@@ -53,7 +53,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on August 31,
+  Desktop</strong> and was last updated on September 2,
   2020.</p><span id="SEC_Overview"></span>
   <h2 class="shortcontents-heading">Short Table of Contents</h2>
   <div class="shortcontents">
@@ -12101,10 +12101,13 @@
                   "voice_002dsetup.html#voice_002dlock_002dmode"
                   name="toc-voice_002dlock_002dmode">12.251.1.1
                   voice-lock-mode</a></li>
-                  <li><a id="toc-voice_002dlock_002dtoggle" href=
-                  "voice_002dsetup.html#voice_002dlock_002dtoggle"
-                  name="toc-voice_002dlock_002dtoggle">12.251.1.2
-                  voice-lock-toggle</a></li>
+                  <li><a id=
+                  "toc-voice_002dlock_002dmode_002d_002dturn_002don"
+                  href=
+                  "voice_002dsetup.html#voice_002dlock_002dmode_002d_002dturn_002don"
+                  name=
+                  "toc-voice_002dlock_002dmode_002d_002dturn_002don">
+                  12.251.1.2 voice-lock-mode–turn-on</a></li>
                   <li><a id=
                   "toc-voice_002dsetup_002ddescribe_002dpersonality"
                   href=
